--- a/06_ajaxTypeAhead/style.css
+++ b/06_ajaxTypeAhead/style.css
@@ -1,4 +1,4 @@
- /* TODO   not self implemented*/
+ /* TODO implement css implement css implement css implement css implement css implement css implement css   not self implemented*/
  
  
  *{
