--- a/15_localStorageAndEventDelegation/style.css
+++ b/15_localStorageAndEventDelegation/style.css
@@ -1,4 +1,4 @@
-/* TODO: Not self implemented */
+/* TODO implement css: Not self implemented */
     html {
         box-sizing: border-box;
         background:url('http://wes.io/hx9M/oh-la-la.jpg') center no-repeat;
