--- a/27_click&Drag/style.css
+++ b/27_click&Drag/style.css
@@ -1,4 +1,4 @@
-/* TODO  */
+/* TODO implement css  */
 html {
     box-sizing: border-box;
     background: url('https://source.unsplash.com/NFs6dRTBgaM/2000x2000') fixed;
